# pi_toolchain

./: .gitignore  README.md
libs/RF24/: Makefile  Makefile.inc  configure  librf24.so.1.3.2
libs/wiringPi/: DRUE_README.md
libs/wiringPi/wiringPi/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  toolchain-rpi.cmake
resources/cmake_template/: CMakeLists.txt  README.md  pi_compile.sh  toolchain-rpi.cmake
